# struct-split

./: Cargo.toml  LICENSE  README.md
lib/: Cargo.toml  README.md  README2.md
lib/src/: doc.rs  hlist.rs  lib.rs  lib2.rs  reflect.rs
lib/src/doc/: self_borrow.rs
lib/tests/: graph.rs  polymorphic.rs  rendering_engine.rs  self_borrow.rs  t1.rs  test.rs
lib/tests/data/: mod.rs
macro/: Cargo.toml  README.md
macro/src/: lib.rs
