[package]
name = "struct-split"
version = "0.1.3"
authors = ["Wojciech Danilo <wojciech.danilo@gmail.com>"]
description = "Crate renamed to 'borrow', use it instead."
edition = "2021"
keywords = ["macros", "struct", "split", "fields", "references"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/wdanilo/struct-split"

[lib]

[dependencies]
struct-split-macro = { version = "0.1.3", path = "../macro" }

[lints]
workspace = true
